[project]
name = "mcp-neo4j-memory"
version = "0.1.5"
description = "MCP Neo4j Knowledge Graph Memory Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "neo4j>=5.26.0",
    "pydantic>=2.6.0",
    "fastapi>=0.111.0",
    "starlette>=0.36.0",
    "typer[all]>=0.12.3",
    "slowapi>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[project.scripts]
mcp-neo4j-memory = "mcp_neo4j_memory:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
